<resources>
    <string name="app_name">Smart_News_App</string>
    <string name="smart_news">Smart  news</string>
    <string name="title1">Smart</string>
    <string name="title2">news</string>
    <string name="signup">التسجيل</string>
    <string name="profile_pic">الصورة الشخصية</string>
    <string name="name">الأسم</string>
    <string name="phone_number">رقم الجوال</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="password">كلمة المرور</string>
    <string name="Already_have_an_account">ألديك حساب بالفعل؟  </string>
    <string name="sign_in">تسجيل الدخول</string>
    <string name="name2">FullName</string>
    <string name="forgetPassword">هل نسيت كلمة المرور؟</string>
    <string name="youHaveNoAccount">ليس لديك حساب ؟</string>
    <string name="Signup_now">سجل الآن</string>
    <string name="change_password">تغيير كلمة المرور</string>
    <string name="save">حفظ</string>
    <string name="new_password">كلمة المرور الجديدة</string>
    <string name="confirm_new_password">تأكيد كلمة المرور الجديدة</string>
    <string name="title_activity__main">Activity_Main</string>
    <string name="main">الرئيسية</string>
    <string name="discover">استكشف</string>
    <string name="later">إقرأ لاحقاً</string>
    <string name="profile">الحساب</string>
    <string name="News">الأخبار</string>
    <string name="search_about_news">  ابحث عن الأخبار</string>
    <string name="all">الكل</string>
    <string name="article">مقالية</string>
    <string name="images">مصورة</string>
    <string name="voice">صوتية مصورة</string>
    <string name="cancel">إلغاء</string>
    <string name="history">سجلات البحث </string>
    <string name="Enter_your_email">أدخل بريدك الإلكتروني لارسال رمز إعادة تعيين كلمة مرور جديدة</string>
    <string name="send">إرسال</string>
    <string name="reset_password">استرجاع كلمة المرور</string>
    <string name="continuee">متابعة</string>
    <string name="Enter_code">ادخل الكود المرسل الي بريدك الإلكتروني لتعيين كلمة مرور جديدة</string>
    <string name="confirm_changing_password">تاكيد تغيير كلمة المرور</string>
    <string name="you_dont_have_code"> لم تحصل علي الرمز ؟</string>
    <string name="re_send">إعادة الإرسال</string>
    <string name="the_message">الرسالة</string>
    <string name="call_us">اتصل بنا</string>
    <string name="profile_pr"> الحساب الشخصي</string>
    <string name="comment">تعليق</string>
    <string name="likes">اعجابات</string>
    <string name="share">مشاركة</string>
    <string name="personal_info">المعلومات الشخصية</string>
    <string name="log_out">تسجيل الخروج</string>
    <string name="about_us">عن التطبيق</string>
    <string name="rules">الشروط والأحكام</string>
    <string name="notifications">الإشعارات</string>
    <string name="error_field_required">هذا الحقل مطلوب</string>
    <string name="error_invalid_email">هذا البريد غير صالح</string>


    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_blank">BlankActivity</string>
    <string name="error_invalid_password">كلمة السرقصيرة جدا</string>
    <string name="error_invalid_phone">رقم الهاتف غير صالح</string>
    <string name="password_not_match">كلمة السر غير متطابقة</string>
    <string name="newest_news">أحدث الأخبار</string>
    <string name="write_comment">أكتب تعليق</string>

</resources>
