<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    tools:context="brand.smart_news_app.Activities.Activity_Signin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">


            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="64dp"
                android:layout_marginTop="128dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title1"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/title2"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="32sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/L_U_Email_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border1"
                android:drawablePadding="8dp"
                android:drawableRight="@mipmap/email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorGray"
                android:textCursorDrawable="@color/colorGray"
                android:textSize="@dimen/hint_text_size"
                tools:layout_editor_absoluteX="182dp"
                tools:layout_editor_absoluteY="181dp" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/L_U_Password_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border1"
                android:drawablePadding="8dp"
                android:drawableRight="@mipmap/password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textAlignment="textEnd"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorGray"
                android:textCursorDrawable="@color/colorGray"
                android:textSize="@dimen/hint_text_size"
                tools:layout_editor_absoluteX="182dp"
                tools:layout_editor_absoluteY="181dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:onClick="H_reserpassword_Activity"
                android:text="@string/forgetPassword"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/small_text_size" />

            <Button
                android:id="@+id/Signin_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/border2"
                android:text="@string/sign_in"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/hint_text_size"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="H_signin"
                    android:text="@string/Signup_now"
                    android:textColor="@color/colorDarkerGray"
                    android:textSize="@dimen/small_text_size"
                    tools:layout_editor_absoluteX="124dp"
                    tools:layout_editor_absoluteY="532dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/youHaveNoAccount"
                    android:textColor="@color/colorGray"
                    android:textSize="@dimen/small_text_size"
                    tools:layout_editor_absoluteX="201dp"
                    tools:layout_editor_absoluteY="532dp" />

            </LinearLayout>
        </LinearLayout>
        <FrameLayout
            android:id="@+id/Frame_layout_id3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_centerVertical="true">

            <ProgressBar
                android:id="@+id/progressBar3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />

            <com.github.ybq.android.spinkit.SpinKitView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/spin_kit"
                style="@style/SpinKitView.Large.Circle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorGray"
                app:SpinKit_Color="#ffffff" />
        </FrameLayout>
    </RelativeLayout>


    </ScrollView>

</LinearLayout>
