<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
     android:layoutDirection="ltr"
    tools:context="brand.smart_news_app.Activities.Activity_Signup"
    tools:layout_editor_absoluteY="25dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Sign_up_scrollView_layout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:orientation="horizontal"
                android:background="@android:color/transparent"
                android:weightSum="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/signup"
                    android:textSize="@dimen/hint_text_size"
                    android:textColor="@android:color/black"
                    android:gravity="center"
                    android:layout_gravity="center"/>
                <ImageView
                    android:id="@+id/back_signUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/move_back"
                    android:layout_gravity="center_vertical"
                    android:tint="@android:color/black"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/U_Profile_Pic"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
                app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="18dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/profile_pic"
            android:textAlignment="center"
            android:textColor="@color/colorDarkerGray"
            android:textSize="@dimen/N_text_size_signup"
            app:layout_constraintBottom_toTopOf="@+id/name_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_pic" />


        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/U_Name_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/border1"
            android:drawableRight="@mipmap/user"
            android:hint="@string/name"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="@dimen/hint_text_size"
            android:drawablePadding="8dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorGray"
            android:textCursorDrawable="@color/colorGray"
            tools:layout_editor_absoluteX="182dp"
            tools:layout_editor_absoluteY="181dp"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/U_Phone_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border1"
            android:drawableRight="@mipmap/phone"
            android:hint="@string/phone_number"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:inputType="phone"
            android:textSize="@dimen/hint_text_size"
            android:maxLength="13"
            android:drawablePadding="8dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorGray"
            android:textCursorDrawable="@color/colorGray"
            tools:layout_editor_absoluteX="182dp"
            tools:layout_editor_absoluteY="181dp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/U_Email_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border1"
            android:drawableRight="@mipmap/email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="@dimen/hint_text_size"
            android:drawablePadding="8dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorGray"
            android:textCursorDrawable="@color/colorGray"
            tools:layout_editor_absoluteX="182dp"
            tools:layout_editor_absoluteY="181dp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/U_Password_id"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border1"
            android:drawableRight="@mipmap/password"
            android:drawablePadding="8dp"
            android:hint="@string/password"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textAlignment="textEnd"
            android:inputType="textPassword"
            android:textSize="@dimen/hint_text_size"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorGray"
            android:textCursorDrawable="@color/colorGray"
            tools:layout_editor_absoluteX="182dp"
            tools:layout_editor_absoluteY="181dp" />

        <Button
            android:id="@+id/Signup_id"
            android:onClick="H_signinActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/border2"
            android:text="@string/signup"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_layout" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textSize="@dimen/small_text_size"
                android:textColor="@color/colorDarkerGray"
                tools:layout_editor_absoluteX="124dp"
                tools:layout_editor_absoluteY="532dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Already_have_an_account"
                android:layout_marginLeft="5dp"
                android:textSize="@dimen/small_text_size"
                android:textColor="@color/colorGray"
                tools:layout_editor_absoluteX="201dp"
                tools:layout_editor_absoluteY="532dp" />

        </LinearLayout>
        </LinearLayout>
            <FrameLayout
                android:id="@+id/Frame_layout_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_centerVertical="true">
                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_gravity="center"
                    android:id="@+id/progressBar" />
                <com.github.ybq.android.spinkit.SpinKitView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/spin_kit"
                    style="@style/SpinKitView.Large.Circle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/colorGray"
                    app:SpinKit_Color="#ffffff" />
            </FrameLayout>
            </RelativeLayout>
    </ScrollView>

</RelativeLayout>
